# migen

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
conda/migen/: meta.yaml  meta.yaml_old  run_test.bat
doc/: conf.py  fhdl.rst  introduction.rst  reference.rst  requirements.txt  simulation.rst
examples/basic/: arrays.py  case.py  fsm.py  lm32_inst.py  memory.py  psync.py  simple_gpio.py  two_dividers.py  using_record.py
examples/sim/: display.py  sr1.py  sr2.py
migen/: __init__.py
migen/actorlib/: control.py
migen/corelogic/: fsm.py
migen/fhdl/: __init__.py  bitcontainer.py  decorators.py  module.py  module2.py  namer.py  simplify.py  specials.py  structure.py  tools.py  tracer.py  verilog.py  visit.py
migen/flow/: plumbing.py
migen/genlib/: cdc.py  fifo.py  fsm.py  io.py  record.py  resetsync.py
migen/sim/: core.py  vcd.py
migen/test/: test_examples.py  test_fsm.py  test_passive.py  test_platform.py  test_vcd.py
migen/util/: misc.py
vpi/: Makefile
