[project]
name = "migen"
version = "0.9.2"
description = "Python toolbox for building complex digital hardware"
readme = "README.md"
keywords = ["HDL", "ASIC", "FPGA", "hardware design"]
authors = [{name = "Sebastien Bourdeauducq", email = "sb@m-labs.hk"}]
license = {text = "BSD-2-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.3"
dependencies = [
    "colorama",
]

[project.urls]
Documentation = "https://m-labs.hk/migen/manual"
"Source code" = "https://github.com/m-labs/migen"
"Issue tracker" = "https://github.com/m-labs/migen/issues"

[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"
